Tests/Modules/Error/Multilingual/.build/catchswahili.pr
{
  "name": "CatchSwahili",
  "description": null,
  "comment": null,
  "steps": [
    {
      "index": 0,
      "text": "set %caughtSwahili% = true",
      "lineNumber": 2,
      "indent": 0,
      "comment": null,
      "actions": [
        {
          "module": "variable",
          "action": "set",
          "parameters": [
            {
              "name": "Name",
              "value": "%caughtSwahili%",
              "type": "variable"
            },
            {
              "name": "Value",
              "value": true,
              "type": "bool"
            }
          ],
          "defaults": [
            {
              "name": "asdefault",
              "value": false,
              "type": "bool"
            }
          ],
          "modifiers": []
        }
      ],
      "intent": null,
      "guidance": null,
      "level": null,
      "confidence": null,
      "formal": "variable.set(Name=%caughtSwahili%, Value=true)",
      "source": null,
      "waitForExecution": true
    }
  ],
  "goals": [],
  "visibility": 1,
  "path": "/Modules/Error/Multilingual/CatchSwahili.goal",
  "prPath": "/Modules/Error/Multilingual/.build/catchswahili.pr",
  "hash": "9b4b035307347296916d7c5b39b0a2c058d0ec06b33195186cbd8e4a8c1b2734",
  "builderVersion": null,
  "isSetup": false,
  "isEvent": false,
  "isSystem": false,
  "isTest": false,
  "inputParameters": null
}